--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <meta charset="UTF-8">
     <title>Витрина товаров</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <script th:src="@{/scripts/script.js}" defer></script>
@@ -98,17 +99,16 @@
                     		В action ссылка на изменение количества товара в корзине.
                     		Передается параметр запроса action=[minus|plus]
                     	    -->
-                            <form th:action="@{/product/{productId}/updateInCart(productId=${product.id})}" method="post">
-                                <input type="hidden" name="_method" value="PUT" />
-                                <span th:if="${product.quantity != null}">
-                                    <button name="action" value="MINUS">-</button>
-                                <!-- В text количество товара в корзине -->
+                            <div>
+                                <span th:if="${product.quantity != 0}">
+                                    <button value="MINUS" th:onclick="sendAction([[${product.id}]], 'MINUS')">-</button>
                                     <span th:text="${product.quantity}"></span>
-                                    <button name="action" value="PLUS">+</button>
+                                    <button value="PLUS" th:onclick="sendAction([[${product.id}]], 'PLUS')">+</button>
                                 </span>
-                                <!-- В if true, если товар еще не был добавлен в корзину, false, если уже был -->
-                                <button name="action" value="PLUS" th:if="${product.quantity == null}" style="float:right;">В корзину</button>
-                            </form>
+                                <button value="PLUS" th:if="${product.quantity == 0}"
+                                        th:onclick="sendAction([[${product.id}]], 'PLUS')"
+                                        style="float:right;">В корзину</button>
+                            </div>
                         </td>
                     </tr>
                 </table>
