--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <meta charset="UTF-8">
     <title>Заказы</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <script th:src="@{/scripts/script.js}" defer></script>
 </head>
 
 <body>
